# Horsekell

./: .gitignore  LICENSE  README.md  horse-racing.cabal  stack.yaml
src/: Main.hs  Main.hs.bak  RaceData.hs  ScraperConfig.hs  ScraperParsing.hs  ScraperUtilities.hs
