name:                horse-racing
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/horse-racing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RaceData
                     , ScraperParsing
                     , ScraperConfig
                     , ScraperUtilities
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network-uri
                     , curl
                     , hxt
                     , url
                     , bytestring
                     , iconv
                     , utf8-string

executable horse-racing
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , curl
                     , hxt
                     , iconv
                     , bytestring
                     , parallel-io
                     , async
                     , utf8-string
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       RaceData
                     , ScraperParsing
                     , ScraperConfig
                     , ScraperUtilities
